@@ -5,8 +5,10 @@
  * For commercial licenses see https://www.tiny.cloud/
  */
 
+import { Arr, Obj, Type } from '@ephox/katamari';
 import Editor from 'tinymce/core/api/Editor';
 import Env from 'tinymce/core/api/Env';
+import DomParser from 'tinymce/core/api/html/DomParser';
 import AstNode from 'tinymce/core/api/html/Node';
 import * as Settings from '../api/Settings';
 import * as Sanitize from './Sanitize';
@@ -14,7 +16,45 @@ import * as VideoScript from './VideoScript';
 
 declare let escape: any;
 
-const createPlaceholderNode = function (editor: Editor, node: AstNode) {
+const isLiveEmbedNode = (node: AstNode) => {
+  const name = node.name;
+  return name === 'iframe' || name === 'video' || name === 'audio';
+};
+
+const getDimension = (node: AstNode, styles: Record<string, string>, dimension: 'width' | 'height', defaultValue: string | null = null): string | null => {
+  const value = node.attr(dimension);
+  if (Type.isNonNullable(value)) {
+    return value;
+  } else if (!Obj.has(styles, dimension)) {
+    return defaultValue;
+  } else {
+    return null;
+  }
+};
+
+const setDimensions = (node: AstNode, previewNode: AstNode, styles: Record<string, string>) => {
+  // Apply dimensions for video elements to maintain legacy behaviour
+  const useDefaults = previewNode.name === 'img' || node.name === 'video';
+
+  // Determine the defaults
+  const defaultWidth = useDefaults ? '300' : null;
+  const fallbackHeight = node.name === 'audio' ? '30' : '150';
+  const defaultHeight = useDefaults ? fallbackHeight : null;
+
+  previewNode.attr({
+    width: getDimension(node, styles, 'width', defaultWidth),
+    height: getDimension(node, styles, 'height', defaultHeight)
+  });
+};
+
+const appendNodeContent = (editor: Editor, nodeName: string, previewNode: AstNode, html: string) => {
+  const newNode = DomParser({ forced_root_block: false, validate: false }, editor.schema).parse(html, { context: nodeName });
+  while (newNode.firstChild) {
+    previewNode.append(newNode.firstChild);
+  }
+};
+
+const createPlaceholderNode = (editor: Editor, node: AstNode) => {
   const name = node.name;
 
   const placeHolder = new AstNode('img', 1);
@@ -22,9 +62,8 @@ const createPlaceholderNode = function (editor: Editor, node: AstNode) {
 
   retainAttributesAndInnerHtml(editor, node, placeHolder);
 
+  setDimensions(node, placeHolder, {});
   placeHolder.attr({
-    'width': node.attr('width') || '300',
-    'height': node.attr('height') || (name === 'audio' ? '30' : '150'),
     'style': node.attr('style'),
     'src': Env.transparentSrc,
     'data-mce-object': name,
@@ -34,13 +73,17 @@ const createPlaceholderNode = function (editor: Editor, node: AstNode) {
   return placeHolder;
 };
 
-const createPreviewIframeNode = function (editor: Editor, node: AstNode) {
+const createPreviewNode = (editor: Editor, node: AstNode) => {
   const name = node.name;
+
+  const styles = editor.dom.parseStyle(node.attr('style'));
+  // Exclude width/height as they should be on the preview element, not on the wrapper
+  const filteredStyles = Obj.filter(styles, ((value, key) => key !== 'width' && key !== 'height'));
 
   const previewWrapper = new AstNode('span', 1);
   previewWrapper.attr({
     'contentEditable': 'false',
-    'style': node.attr('style'),
+    'style': editor.dom.serializeStyle(filteredStyles),
     'data-mce-object': name,
     'class': 'mce-preview-object mce-object-' + name
   });
@@ -48,15 +91,31 @@ const createPreviewIframeNode = function (editor: Editor, node: AstNode) {
   retainAttributesAndInnerHtml(editor, node, previewWrapper);
 
   const previewNode = new AstNode(name, 1);
+  setDimensions(node, previewNode, styles);
   previewNode.attr({
     src: node.attr('src'),
-    allowfullscreen: node.attr('allowfullscreen'),
     style: node.attr('style'),
-    class: node.attr('class'),
-    width: node.attr('width'),
-    height: node.attr('height'),
-    frameborder: '0'
+    class: node.attr('class')
   });
+
+  if (name === 'iframe') {
+    previewNode.attr({
+      allowfullscreen: node.attr('allowfullscreen'),
+      frameborder: '0'
+    });
+  } else {
+    // Exclude autoplay as we don't want video/audio to play by default
+    const attrs = [ 'controls', 'crossorigin', 'currentTime', 'loop', 'muted', 'poster', 'preload' ];
+    Arr.each(attrs, (attrName) => {
+      previewNode.attr(attrName, node.attr(attrName));
+    });
+
+    // Recreate the child nodes using the sanitized inner HTML
+    const sanitizedHtml = previewWrapper.attr('data-mce-html');
+    if (Type.isNonNullable(sanitizedHtml)) {
+      appendNodeContent(editor, name, previewNode, sanitizedHtml);
+    }
+  }
 
   const shimNode = new AstNode('span', 1);
   shimNode.attr('class', 'mce-shim');
@@ -68,17 +127,13 @@ const createPreviewIframeNode = function (editor: Editor, node: AstNode) {
 };
 
 const retainAttributesAndInnerHtml = function (editor: Editor, sourceNode: AstNode, targetNode: AstNode) {
-  let attrName;
-  let attrValue;
-  let ai;
-
   // Prefix all attributes except width, height and style since we
   // will add these to the placeholder
   const attribs = sourceNode.attributes;
-  ai = attribs.length;
+  let ai = attribs.length;
   while (ai--) {
-    attrName = attribs[ai].name;
-    attrValue = attribs[ai].value;
+    const attrName = attribs[ai].name;
+    let attrValue = attribs[ai].value;
 
     if (attrName !== 'width' && attrName !== 'height' && attrName !== 'style') {
       if (attrName === 'data' || attrName === 'src') {
@@ -146,9 +201,9 @@ const placeHolderConverter = function (editor: Editor) {
         }
       }
 
-      if (node.name === 'iframe' && Settings.hasLiveEmbeds(editor) && Env.ceFalse) {
+      if (isLiveEmbedNode(node) && Settings.hasLiveEmbeds(editor) && Env.ceFalse) {
         if (!isWithinEmbedWrapper(node)) {
-          node.replace(createPreviewIframeNode(editor, node));
+          node.replace(createPreviewNode(editor, node));
         }
       } else {
         if (!isWithinEmbedWrapper(node)) {
@@ -160,7 +215,7 @@ const placeHolderConverter = function (editor: Editor) {
 };
 
 export {
-  createPreviewIframeNode,
+  createPreviewNode,
   createPlaceholderNode,
   placeHolderConverter
 };
